--- a/conda_build_config.yaml
+++ b/conda_build_config.yaml
@@ -229,13 +229,13 @@ blas_impl:
 abseil_cpp:
   - '20220623.0'
 alsa_lib:
-  - 1.2.7
+  - 1.2.8
 antic:
   - 0.2
 aom:
   - 3.5
 arb:
-  - '2.22'
+  - '2.23'
 arpack:
   - 3.7
 arrow_cpp:
@@ -244,37 +244,37 @@ arrow_cpp:
   - 7.0.1
   - 6.0.2
 assimp:
-  - 5.2.3
+  - 5.2.4
 attr:
   - 2.5
 aws_c_auth:
-  - 0.6.17
+  - 0.6.21
 aws_c_cal:
-  - 0.5.19
+  - 0.5.20
 aws_c_common:
-  - 0.8.1
+  - 0.8.5
 aws_c_event_stream:
   - 0.2.15
 aws_c_http:
-  - 0.6.20
+  - 0.6.27
 aws_c_io:
-  - 0.13.4
+  - 0.13.11
 aws_c_mqtt:
-  - 0.7.12
+  - 0.7.13
 aws_c_s3:
-  - 0.1.49
+  - 0.1.51
 aws_c_sdkutils:
-  - 0.1.3
+  - 0.1.7
 aws_checksums:
   - 0.1.13
 aws_crt_cpp:
-  - 0.18.8
+  - 0.18.16
 aws_sdk_cpp:
-  - 1.9.160
+  - 1.9.375
 boost:
-  - 1.74.0
+  - 1.78.0
 boost_cpp:
-  - 1.74.0
+  - 1.78.0
 bzip2:
   - 1
 c_ares:
@@ -310,7 +310,7 @@ davix:
 dbus:
   - 1
 eclib:
-  - 20220621
+  - '20221012'
 exiv2:
   - 0.27
 expat:
@@ -334,13 +334,13 @@ gf2x:
 gdk_pixbuf:
   - 2
 gnuradio_core:
-  - 3.10.3
+  - 3.10.4
 gnutls:
   - 3.7
 gsl:
   - 2.7
 gsoap:
-  - 2.8.119
+  - 2.8.123
 gstreamer:
   - '1.20'
 gst_plugins_base:
@@ -368,15 +368,16 @@ glpk:
 gmp:
   - 6
 google_cloud_cpp:
-  - '2.2'
+  - '2.3.0'
 google_cloud_cpp_common:
   - 0.25.0
 googleapis_cpp:
   - '0.10'
 graphviz:
   - '6'
+# keep in sync with libgrpc
 grpc_cpp:
-  - '1.47'
+  - '1.49'
 harfbuzz:
   - '5'
 hdf4:
@@ -384,17 +385,19 @@ hdf4:
 hdf5:
   - 1.12.1
 icu:
-  - '69'
+  - '70'
 imath:
   - '3.1'
 ipopt:
-  - 3.14.9
+  - 3.14.10
 isl:
   - '0.25'
 jasper:
   - '2'
 jpeg:
   - 9
+lcms:
+  - 2
 lerc:
   - '4'
 libjpeg_turbo:
@@ -416,7 +419,7 @@ libabseil_static:
 libarchive:
   - 3.5
 libavif:
-  - 0.10.1
+  - 0.11.1
 libblitz:
   - 1.0.2
 libcint:
@@ -445,6 +448,8 @@ libgdal:
   - '3.5'
 libgit2:
   - '1.5'
+libgrpc:
+  - '1.49'
 libhugetlbfs:
   - 2
 libhwy:
@@ -472,13 +477,15 @@ libpcap:
 libpng:
   - 1.6
 libprotobuf:
-  - '3.20'
+  - '3.21'
 librdkafka:
   - '1.9'
 librsvg:
   - 2
 libsecret:
   - 0.18
+libsndfile:
+  - 1.1
 libspatialindex:
   - 1.9.3
 libssh:
@@ -502,7 +509,7 @@ libwebp:
 libwebp_base:
   - 1
 libxml2:
-  - 2.9
+  - 2.10
 libxsmm:
   - 1
 libuuid:
@@ -518,7 +525,7 @@ lzo:
 metis:
   - 5.1
 mimalloc:
-  - 2.0.6
+  - 2.0.7
 mkl:
   - 2022
 mkl_devel:
@@ -542,7 +549,7 @@ netcdf_fortran:
 nettle:
   - '3.8'
 nodejs:
-  - '17'
+  - '18'
   - '16'
   - '14'  # [not (osx and arm64)]
 nss:
@@ -556,10 +563,9 @@ ntl:
 # we build for the oldest version possible of numpy for forward compatibility
 numpy:
   # part of a zip_keys: python, python_impl, numpy
-  - 1.20   # [not (osx and arm64)]
+#  - 1.20
   - 1.20
-  - 1.20
-  - 1.21
+#  - 1.21
 occt:
   - 7.6
 openblas:
@@ -577,23 +583,23 @@ openssl:
 openturns:
   - '1.19'
 orc:
-  - 1.7.6
+  - 1.8.0
 pango:
-  - '1'
+  - 1.50
 pari:
   - 2.13.* *_pthread
 perl:
   - 5.32.1
 petsc:
-  - '3.16'
+  - '3.17'
 petsc4py:
-  - '3.16'
+  - '3.17'
 slepc:
-  - '3.16'
+  - '3.17'
 slepc4py:
-  - '3.16'
+  - '3.17'
 svt_av1:
-  - 1.2.1
+  - 1.3.0
 p11_kit:
   - '0.24'
 pcre:
@@ -603,27 +609,25 @@ pcre2:
 pixman:
   - 0
 poco:
-  - 1.12.2
+  - 1.12.4
 poppler:
   - '22.04'
 proj:
-  - 9.0.1
+  - 9.1.0
 pulseaudio:
   - 14.0
 pybind11_abi:
   - 4
 python:
   # part of a zip_keys: python, python_impl, numpy
-  - 3.7.* *_cpython    # [not (osx and arm64)]
-  - 3.8.* *_cpython
+#  - 3.8.* *_cpython
   - 3.9.* *_cpython
-  - 3.10.* *_cpython
+#  - 3.10.* *_cpython
 python_impl:
   # part of a zip_keys: python, python_impl, numpy
-  - cpython   # [not (osx and arm64)]
+#  - cpython
   - cpython
-  - cpython
-  - cpython
+#  - cpython
 pytorch:
   - '1.12'
 qt:
@@ -637,18 +641,19 @@ readline:
 rocksdb:
   - "6.10"
 root_base:
-  - 6.26.4
+  - 6.26.8
 ruby:
   - 2.5
   - 2.6
 r_base:
   - 4.1
+  - 4.2   # [not win]
 scotch:
   - 6.0.9
 ptscotch:
   - 6.0.9
 s2n:
-  - 1.3.23
+  - 1.3.28
 singular:
   - 4.2.1.p3
 snappy:
@@ -682,7 +687,9 @@ tiledb:
 ucx:
   - 1.12.1
 uhd:
-  - 4.2.0
+  - 4.3.0
+urdfdom:
+  - 3.1
 vc:                    # [win]
   - 14                 # [win]
 vlfeat:
@@ -715,10 +722,3 @@ zlib_ng:
   - 2.0
 zstd:
   - '1.5'
-
-python:
-  - 3.9
-python_impl:
-  - cpython
-numpy:
-  - 1.21
